# credit-_scoring_agent_v2

./: .dockerignore  .env  Dockerfile  README.md  credit_scoring.py  credit_scoring_backup.py  credit_scoring_huggingface.py  generate_applicant_training_data.py  generate_sample_data.py  main.py  ml_credit_model.py  pyproject.toml  requirements.txt  server.py  train_applicant_credit_model.py  train_credit_model.py  ui_huggingface.py  ui_streamlit.py
.github/workflows/: docker-image.yml
.streamlit/: config.toml
data/: applicant_training.csv  credit_training_sample.csv
models/: applicant_credit_model.pkl
